--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>COVID-19</title>
 <link rel="stylesheet"  href="style.css">
 	<meta name="viewpoer" content="width=device width,initial scale=1.0">
+	<link rel="icon" href="logo.png"/>
 </head>
 <body>
 	<ul>
