--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	</ul>
 <h2>This page is created by <mark> Sujit Baidya</mark></h2>
 
-<marquee>
+<marquee class=mar>
 	<strong>
 		<h1>💘 Stay-Safe & Keep Yourself in Home Quarantine 💘</h1>
 	</strong>
